<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>preffered_velocity_prediction</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="isharadilshanra11@gmail.com">ishara</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend> 
  <depend>geometry_msgs.msg</depend>
  <depend>turtlesim</depend>
  <depend>std_msgs.msg</depend>
  <depend>python3-numpy</depend>
  <depend>python3-filterpy</depend>
  <depend>smrr_interfaces.msg</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
